Fixed a problem that causes the greeter overlaps the main container

--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -39,7 +39,7 @@ html {
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			height: 40%;
+			// height: 40%;
 			min-height: 10em;
 			color: greeter_color;
 
